# pMPL

./: .gitignore  README.md
2pc/: CMakeLists.txt  Constant.cpp  Constant.h  main.cpp
2pc/Mul_Triplets/: MT0_3.txt  MT3_0.txt  MT3_1.txt  MT3_2.txt  MT3_3.txt  MT4_0.txt  MT4_1.txt  MT4_2.txt  MT4_3.txt  MT7_0.txt  MT7_1.txt  MT7_2.txt  MT7_3.txt  README.md
2pc/core/: Boolean_Share.cpp  Boolean_Share.h  Secret_Cmp.cpp  Secret_Cmp.h  Secret_Mul.cpp  Secret_Mul.h
2pc/data/: README.md
2pc/ml/: linear.cpp  linear.h  logistic.cpp  logistic.h  nn.cpp  nn.h  one_logistic.cpp
2pc/util/: IOManager.cpp  IOManager.h  Mat.cpp  Mat.h  SocketManager.cpp  SocketManager.h  SocketOnline.cpp  SocketOnline.h
3pc/: CMakeLists.txt  Constant.cpp  Constant.h  test.cpp
3pc/Mul_Triplets/: MT0_0.txt  MT0_1.txt  MT0_2.txt  MT0_3.txt  MT1_0.txt  MT1_1.txt  MT1_2.txt  MT1_3.txt  MT3_0.txt  MT3_1.txt  MT3_2.txt  MT3_3.txt  MT4_0.txt  MT4_1.txt  MT4_2.txt  MT4_3.txt  MT5_0.txt  MT5_1.txt  MT5_2.txt  MT5_3.txt  MT7_0.txt  MT7_1.txt  MT7_3.txt  MT8_0.txt  MT8_1.txt  MT8_2.txt  MT8_3.txt
3pc/Result/: Linear0.txt  Linear1.txt  Linear2.txt  Linear3.txt  Logistic0.txt  Logistic1.txt  Logistic2.txt  Logistic3.txt  README.md
3pc/core/: Boolean_Share.cpp  Boolean_Share.h  Secret_Cmp.cpp  Secret_Cmp.h  Secret_Mul.cpp  Secret_Mul.h
3pc/ml/: linear.cpp  linear.h  logistic.cpp  nn.cpp  nn.h
3pc/offline/: CMakeLists.txt  README.md  offline_step_one.cpp  offline_step_two.cpp
3pc/util/: IOManager.cpp  IOManager.h  Mat.cpp  Mat.h  SocketManager.cpp  SocketManager.h  SocketOnline.cpp  SocketOnline.h
